# LMN-3-DAW

./: .clang-format  .clang-format-ignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  contributing.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: c-cpp.yml  pull_request.yaml  raspberry-pi.yml  release.yaml  release_master.yml  tests_development.yml  tests_master.yml  tests_x86_64.yml  tests_x86_64_master.yml
Modules/app_models/: app_models.h
Modules/app_models/Parameters/: KnobControlledParameter.cpp  KnobControlledParameters.h  LFODestinationParameter.cpp  LFODestinationParameter.h  LFODestinationParameterParameter.h  NormalizedParameter.cpp  NormalizedParameter.h
Modules/app_models/Presets/: Preset.cpp  Preset.h  PresetSlot.h  PresetSlotList.cpp  PresetSlots.h
Modules/app_models/Themes/: Theme.cpp  ThemeList.cpp  ThemeList.h  ThemeManager.cpp  Themes.cpp
Modules/app_models/Utilities/: Identifiers.h  StateBuilder.cpp  StateBuilder.h  ThemeManager.h  UnitTestCategories.h
Plugins/: CMakeLists.txt
Plugins/Engines/: CMakeLists.txt
Plugins/Engines/AudioPlugin/: CMakeLists.txt
Plugins/ExampleFxPlugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h
Plugins/ExampleModulationPlugin/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
Plugins/ExampleSynthPlugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
Samples/: rmk2_natural-3545.aif  sci_prophet_5-01-2829.aif
Samples/Drum/808/: 808.xml  808.yaml  Wacky.xml
Samples/Drum/ChoosyHouseKit/: Choosy.xml  choose_house_kit.yaml
Samples/Synth/: cassette-ambient-4694.aif  jx8p_mantra-3547.aif  rhodeschord-3969.aif  vocochord-3905.aif
Source/: App.cpp  App.h  Main.cpp
Source/Models/: Identifiers.h  StateBuilder.cpp  StateBuilder.h
Source/Models/Parameters/: KnobControlledParameter.cpp  KnobControlledParameter.h  LFODestinationParameter.cpp  LFODestinationParameter.h  LFODestinationParameterParameter.cpp  LFODestinationParameterParameter.h  LFOPDestinationParameter.cpp  LFOPDestinationParameter.h  NormalizedParameter.cpp  NormalizedParameter.h
Source/Models/Presets/: Preset.cpp  Preset.h  PresetSlot.cpp  PresetSlot.h  PresetSlotList.cpp  PresetSlotList.h  PresetSlots.cpp  PresetSlots.h
Source/Models/Themes/: Theme.cpp  Theme.h  ThemeList.cpp  ThemeManager.h  Themes.cpp  Themes.h
Source/Models/Utilities/: Identifiers.h  StateBuilder.cpp  StateBuilder.h
Source/Modules/app_configuration/: ConfigurationHelpers.cpp  ConfigurationHelpers.h  app_configuration.cpp  app_configuration.h
Source/Modules/app_models/: app_models.cpp  app_models.h
Source/Modules/app_navigation/: app_navigation.cpp  app_navigation.h
Source/Modules/app_services/: app_services.cpp  app_services.h
Source/Modules/app_view_models/: app_view_models.cpp  app_view_models.h
Source/Modules/internal_plugins/: internal_plugins.cpp  internal_plugins.h
Source/Services/MidiCommandManager/: MidiCommandInfo.cpp  MidiCommandInfo.h  MidiCommandManager.cpp  MidiCommandManager.h
Source/Views/: App.cpp  App.h
Source/Views/App/: App.cpp  App.h  ControlButtonIndicator.cpp  ControlButtonIndicator.h  MessageBox.cpp  MessageBox.h  ProgressView.cpp  ProgressView.h
Tests/: CMakeLists.txt  Main.cpp
Tests/Source/: Main.cpp  TracktionTestClasses.h  UnitTestCategories.h
Tests/Source/app_models/Parameters/: NormalizedParameterTests.cpp
Tests/Source/app_models/Parameters/ADSR/: ADSRParametersTests.cpp
Tests/Source/app_models/Parameters/Effect/: EffectParametersTests.cpp
Tests/Source/app_models/Parameters/Engine/: EngineParametersTest.cpp
Tests/Source/app_models/Parameters/LFO/: LFOParametersTests.cpp
Tests/Source/app_models/Presets/: PresetSlotListTests.cpp  PresetSlotTests.cpp  PresetSlotsTests.cpp  PresetTests.cpp
Tests/Source/app_models/State/CurrentTrack/Plugins/: TrackPluginsListViewStateTests.cpp
Tests/Source/app_models/State/Tracks/: TracksViewStateTests.cpp
Tests/Source/app_models/Themes/: ThemeListTests.cpp  ThemeTests.cpp  ThemesTests.cpp
Tests/Source/app_models/Utilities/: StateBuilderTests.cpp  ThemeManagerTests.cpp  ThemeReaderTests.cpp
Tests/Source/app_view_models/Edit/Plugins/: TrackPluginsViewModelTests.cpp
Tests/Source/app_view_models/Edit/Tracks/: TracksViewModelTests.cpp
Tests/app_models/Themes/: MockThemeListener.h  ThemeListTest.cpp  ThemeTest.cpp  ThemesTest.cpp
Tests/app_models/Utilities/: StateBuilderTest.cpp  ThemeReaderTest.cpp
Tests/app_view_models/Edit/EditItemList/: EditItemListViewModelTest.cpp  MockEditItemListViewModelListener.h
Tests/app_view_models/Edit/EditItemList/ListAdapters/: PluginsListAdapterTest.cpp
Tests/app_view_models/Edit/ItemList/: EditItemListViewModelTest.cpp  ItemListStateTest.cpp  MockEditItemListViewModelListener.h  MockItemListStateListener.h
Tests/app_view_models/Edit/ItemList/ListAdapters/: ModifiersListAdapterTest.cpp  PluginsListAdapterTest.cpp  TracksListAdapterTest.cpp
Tests/app_view_models/Edit/Modifiers/: AvailableModifiersListViewModelTest.cpp  AvailablePluginParametersListViewModelTest.cpp  ModifierPluginDestinationsViewModelTest.cpp  TrackModifiersListViewModelTest.cpp
Tests/app_view_models/Edit/Plugins/: AvailablePluginsViewModelTest.cpp  MockAvailablePluginsViewModelListener.h  MockTrackPluginsViewModelListener.h  TrackPluginsListViewModelTest.cpp  TrackPluginsViewModelTest.cpp
Tests/app_view_models/Edit/Sequencers/: StepSequencerViewModelTest.cpp
Tests/app_view_models/Edit/Tempo/: MockTempoSettingsViewModelListener.h  TempoSettingsViewModelTest.cpp
Tests/app_view_models/Edit/Tracks/: MockTrackViewModelListener.h  MockTracksListViewModelListener.h  MockTracksViewModelListener.h  TrackViewModelTest.cpp  TracksListViewModelTest.cpp  TracksViewModelTest.cpp
UnitTestRunner/: CMakeLists.txt
fontaudio/: .gitignore  CHANGELOG.md  README.md  package.json
fontaudio/font/: fontaudio.css  fontaudio.eot  fontaudio.html  fontaudio.json
fontaudio/scripts/: makejucecode.js  svgcleaner.js  svgcleaner.yml
(+472 files in other folders)
